<resources>
    <string name="app_name">Vendedor</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarme</string>
    <string name="todo">TODO</string>
    <string name="todo_secondary">TODO</string>
    <string name="cargando">Cargando</string>
    <string name="title_activity_cemtral_icon">cemtral_icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registro">Registro</string>

    <string name="nombre">Nombre:</string>
    <string name="primer_apellido">Primer Apellido:</string>
    <string name="segundo_apellido">Segundo Apellido:</string>
    <string name="tipo_documento">Tipo Documento:</string>
    <string name="numero_documento">Número Documento:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="correo">Correo:</string>
    <string name="celular">Celular:</string>
    <string name="departamento">Departamento:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="direccion">Dirección:</string>
    <string name="reg_contrasenia">Contraseña:</string>
    <string name="reg_rep_contrasenia">Confirmar Contraseña:</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="boton_registrar">Registrar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_rec_contrasenia">Recuperar Contraseña</string>
    <string name="ingresar_correo">Ingrese Correo:</string>
    <string name="obtener_codigo">Obtener Código De Recuperación</string>
    <string name="codigo_recuperacion">Código De Recuperación:</string>
    <string name="confirmar">Confirmar</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="todo3">TODO</string>
    <string name="name">Name</string>
    <string name="name2">Name</string>
    <string name="todo1">TODO</string>
    <string name="name3">Name</string>
    <string name="button">Button</string>
    <string name="register_button">Button</string>
</resources>